# digital-emblem

./: Digital-Emblem-Workflow.drawio  draft-haberman-digital-emblem.xml
charter/: diem-charter.md
internet-draft/: draft-bwbh-digital-emblem-model.md  draft-haberman-digital-emblem.md  draft-haberman-digital-emblem.xml
prototype/: .gitignore  README.md  common.py  current_approver.txt  pyproject.toml  tlsarecord.py
prototype/certbot-dns-tsig/: dns01_tsig.py  dns01_tsig_test.py
prototype/default-params/: ee_params.py
